Fixed CSS issues on mobile: Nav dropdown, project size, header, etc.

--- a/app/styles/layout/_base.scss
+++ b/app/styles/layout/_base.scss
@@ -86,6 +86,10 @@
       display: block;
     }
 
+    p {
+      float: none;
+    }
+
     #{$all-buttons} {
       &.pull-right {
         float: none;
@@ -97,6 +101,12 @@
     }
 
     &.project {
+      padding: $padding 0;
+    }
+  }
+
+  .container--main {
+    .header {
       padding: $padding 0;
     }
   }
